<resources>
    <string name="app_name">RK_Alexa</string>
    <string name="action_to_wifi_mode">At the top of the device, press 3S above the top button to the light green light, then enter the WIFI mode</string>
    <string name="action_author_success">You have successfully logged in to Amazon</string>
    <string name="device_setup">Start configuration</string>
    <string name="dialog_loading">Loading...</string>
    <string name="request_send_success">Send success</string>
    <string name="request_send_fail">Send fail</string>
    <string name="title_prompt">Prompt</string>
    <string name="device_not_connected">Current devices are not connected to hot spots</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="blu_tag_connected">Connecting device</string>
    <string name="blu_tag_paired">Paired devices</string>
    <string name="blu_tag_scaned">Scaned devices</string>
    <string name="wifi_connecting">Connecting WIFI...</string>
    <string name="wifi_connected_fail">Failed to connect device hotspots</string>
    <string name="wifi_connected_timeout">Timeout to connect device hotspots</string>
    <string name="name_scan_device">Scaned devices</string>
    <string name="if_continue_setup_wifi">Device is not authorized yet,continue to set up WIFI?</string>
    <string name="not_connected_wifi">Device is not already connected to wifi</string>
    <string name="error_pwd">Error of password，please check</string>
    <string name="author_info_expire">Authorization information has expired, please reobtain</string>
    <string name="author_info_send_success">Authorization information send success</string>
    <string name="if_continue_setup_wifi_after_fail">Authorization information send fail,whether to continue sending WiFi information</string>
    <string name="wifi_send_success">Wifi information send success</string>
    <string name="wifi_send_fail">Wifi information send fail</string>
    <string name="wifi_setting_up">Setting wifi...</string>
    <string name="wifi_already_opened">Wifi already opened</string>
    <string name="wifi_already_closed">Wifi already closed</string>
    <string name="wifi_clos_again">Please close again</string>
    <string name="wifi_closing">Wifi is closing</string>
    <string name="wifi_closed">Wifi was closed</string>
    <string name="wifi_opening">Wifi is opening</string>
    <string name="wifi_opened">Wifi was opened</string>
    <string name="wifi_state_not_get">Don\'t get wifi state</string>
    <string name="wifi_not_scaned_this_region">There is no wireless network in the current region</string>
    <string name="wifi_opening_wait">Wifi is opening，please try again later</string>
    <string name="wifi_not_opened">Wifi is not opened</string>
    <string name="jump_to_second">发掘网络邻居</string>
    <string name="discover_start">开始发掘 ...</string>
    <string name="discover_finished">发掘完成 !</string>
    <string name="discover_canceled">取消发掘 !</string>
    <string name="discover_proxy_title">Proxy Error</string>
    <string name="discover_proxy_msg">Discovery is canceled, because a mac address appeared multiple times, you probably are behind a proxy.\n\nGo to your Gateway from the browser : http://%s</string>
    <string name="discover_root_title">Installation: Root</string>
    <string name="discover_root_install">Do you want to install the scan daemon for root ?</string>
    <string name="discover_root_restart">Restarting application ...</string>
    <string name="discover_empty">请开始发掘</string>
    <string name="discover_action_title">选择</string>
    <string name="discover_action_scan">Scan ports</string>
    <string name="discover_action_rename">Change name</string>
    <string name="discover_action_tcpsocket">tcp socket</string>
    <string name="discover_action_saved">更改成功!</string>
    <string name="discover_action_deleted">取消改名</string>
    <string name="discover_myphone_name">MyPhone</string>
    <string name="check_wifi_state">检查WIFi状态</string>
    <string name="open_wifi">打开WiFi</string>
    <string name="close_wifi">关闭WiFi</string>
    <string name="scan_wifi">扫描附近WiFi</string>
    <string name="send">发送</string>
    <string name="send_message">发送的数据</string>
    <string name="receive">接收</string>
    <string name="receive_message">接收的数据</string>
    <string name="save_send">保存数据</string>
    <string name="configure_port">配置端口号</string>
    <string name="open_server">开启服务</string>
    <string name="other_port">对方开启的端口号</string>
    <string name="server_ip_address">服务器端ip地址</string>
    <string name="timing">定时ms</string>
    <string name="timing_send">定时发送</string>
    <string name="local_ip_address">本机IP地址</string>
    <string name="app_loading">Loading</string>
    <string name="btn_configure">配置</string>
    <string name="btn_configure_port">配置端口号</string>
    <string name="btn_connect">连接</string>
    <string name="btn_discover">发掘</string>
    <string name="btn_discover_cancel">取消</string>
    <string name="btn_options">选项</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_open_content">打开目录</string>
    <string name="btn_export">Export</string>
    <string name="btn_close">Close</string>
    <string name="btn_save">保存数据</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_send">发送</string>
    <string name="btn_back">Back</string>
    <string name="btn_info">Info</string>
    <string name="btn_ports">Ports</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_set">设置</string>
    <string name="btnrd_receive_text">文本</string>
    <string name="btnrd_receive_ascall">hex</string>
    <string name="ckbx_time">t</string>
    <string name="ckbx_timing">定时</string>
    <string name="tt_port">端口：</string>
    <string name="tt_local_port">本地端口</string>
    <string name="tt_remote_port">远程端口</string>
    <string name="task_db">Downloading and installing %s database ...</string>
    <string name="task_services">Creating Services database ...\nThis may take a while ...</string>
    <string name="package_missing">%s must be installed from the market !</string>
    <string name="wifi_enabled">Wifi is enabled</string>
    <string name="wifi_enabling">Wifi is enabling</string>
    <string name="wifi_disabling">Wifi is disabling</string>
    <string name="wifi_disabled">Wifi is disabled</string>
    <string name="wifi_scanning">Wifi is scanning</string>
    <string name="wifi_associating">Wifi is associating with %s</string>
    <string name="wifi_dhcp">Obtaining IP address from %s</string>
    <string name="wifi_unknown">Wifi 状态未知</string>
    <string name="no_permisssion">没有权限</string>
    <string name="net_ip">IP: %1$s/%2$d (%3$s)</string>
    <string name="net_carrier">CARRIER: %s</string>
    <string name="net_ssid">SSID: %s</string>
    <string name="net_mode">MODE: %s</string>
    <string name="net_mode_wifi">WiFi (%1$s %2$s)</string>
    <string name="net_mode_mobile">Mobile</string>
    <string name="net_mode_eth">Ethernet (Not supported yet)</string>
    <string name="net_mode_unknown">Unknown</string>
    <string name="scan_single_title">Scan IP</string>
    <string name="scan_single_summary">Enter an IP address or FQDN to scan, i.e. scanme.nmap.org</string>
    <string name="scan_noport">No open port found !</string>
    <string name="scan_noaction">No associated action !</string>
    <string name="scan_connect">Connect</string>
    <string name="scan_start">Scan started ...</string>
    <string name="scan_finished">Scan finished !</string>
    <string name="scan_canceled">Scan canceled !</string>
    <string name="scan_open">Open (%s)</string>
    <string name="scan_closed">Closed (%s)</string>
    <string name="scan_host_unreachable">Host unreachable !</string>
    <string name="scan_banner_title">Port %s/tcp</string>
    <string name="info_time">Response time:</string>
    <string name="info_mac">MAC Address:</string>
    <string name="info_nic">NIC vendor:</string>
    <string name="info_ports_open">Open ports:</string>
    <string name="info_ports_closed">Closed ports:</string>
    <string name="info_unknown">Unknown</string>
    <string name="export_finished">File saved !</string>
    <string name="export_choose">Choose file destination</string>
    <string name="export_save">Save</string>
    <string name="export_exists_title">File already exists</string>
    <string name="export_exists_msg">Do you want to overwrite ?</string>
    <string name="help_discovery_title">Hosts discovery</string>
    <string name="help_discovery_content">The method that is being used, does not need to have root privileges. In future release there will be more advanced techniques, once the non-root ones are polished.\n\nHere is how it works: \n1. Calculate the subnetwork range\n2. Iterate throught IP and query them\n3. First it sends an ICMP ping or Echo on tcp/7 (with InetAddress.isReachable())\n4. If it does not work, it tries to connect() on well known open tcp ports such as: 135, 139, 22, 111, 80\n5. If none of the above is successful, the host is not discovered</string>
    <string name="help_portscan_title">Port scan</string>
    <string name="help_portscan_content">Port scan is event driven, using Java\'s Selector and SocketChannel.\nThere is a fake timeout by registrering the time in ms at socket\'s creation and checking regularly this value.\nThe port scan method, as discovery, uses full tcp connection check. (will be more granular in the future with root features.)\n\nA maximum of 127 Sockets are opened at a time, so this is not always accurate, but quite fast. Again, a new feature is coming that will adapt times between requests according to host response time (kind of software network congestion control)\n\nA port is considered open when tcp connect() is fully successful, closed when no service is listening on the other end, or filtered when the timeout is reached.</string>
    <string name="help_links_title">Links</string>
    <string name="help_links_content">- TCP connect scan: http://nmap.org/book/man-port-scanning-techniques.html#id421401\n\n- Host discovery: http://nmap.org/book/man-host-discovery.html</string>
    <string name="preferences_help">Help</string>
    <string name="preferences_export"></string>
    <string name="preferences_credits">Credits</string>
    <string name="preferences_discover">Discovery</string>
    <string name="preferences_portscan">Port Scan</string>
    <string name="preferences_advanced">General</string>
    <string name="preferences_donate">Donate: If you like this app, you can buy me a beer.</string>
    <string name="preferences_resolve_name_title">Resolve Hostname</string>
    <string name="preferences_resolve_name_summary">Use system DNS to resolve ip addresses</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_vibrate_summary">Vibrate when Scan is completed</string>
    <string name="preferences_ratecontrol_enable_title">Rate control</string>
    <string name="preferences_ratecontrol_enable_summary">Enable automatic rate detection</string>
    <string name="preferences_timeout_discover_title">Custom rate</string>
    <string name="preferences_timeout_discover_summary">Rate of discovery in millisecondes</string>
    <string name="preferences_port_start_title">First Port</string>
    <string name="preferences_port_start_summary">First TCP Port to scan. 1-65535</string>
    <string name="pref_category_net_update">网络升级</string>
    <string name="pref_update_item_check_version">检查新版本</string>
    <string name="pref_update_item_set_ip">服务器IP设置</string>
    <string name="pref_update_item_download_update">下载&amp;更新</string>
    <string name="dialog_title_alert">提示</string>
    <string name="dialog_button_confirm">确定</string>
    <string name="dialog_button_cancel">取消</string>
</resources>