<!--<?xml version="1.0" encoding="utf-8"?>-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_bombbox"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:gravity="center"
            android:text="@string/dialog_title_alert"
            android:visibility="visible"
            android:layout_weight="2.32" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/message"
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:lineSpacingMultiplier="1.5"
                android:minHeight="120.0dip"
                android:paddingBottom="15.0dip"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip"
                android:paddingTop="15.0dip" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:background="@drawable/dialog_bottom_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                android:background="@drawable/button_style_selector"
                android:layout_width="100.0dip"
                android:layout_height="30.0dip"
                android:gravity="center"
                android:text="@string/dialog_button_confirm" />

            <Button
                android:id="@+id/negativeButton"
                android:background="@drawable/button_style_selector"
                android:layout_width="100.0dip"
                android:layout_height="30.0dip"
                android:layout_marginLeft="30.0dip"
                android:gravity="center"
                android:text="@string/dialog_button_cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>